--- a/client-side/admin/dashboard.html
+++ b/client-side/admin/dashboard.html
@@ -5,12 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard | julienishimwe | portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../pages/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
-    <link rel="shortcut icon" type="image" href="../img/title-logo.jpg">
-
-    
+    <link rel="shortcut icon" type="image" href="../img/title-logo.jpg">    
 </head>
+
 <body class="dashboard">
     <div class="sidebar">
         <h3 class="sidb-title" >Admin</h3>
